fix overflow-y in input question

--- a/src/assets/css/QnAMaker.css
+++ b/src/assets/css/QnAMaker.css
@@ -73,6 +73,7 @@ input#keyword-input {
 
 .my-0 textarea {
     margin-bottom: 10px;
+    overflow-y: scroll;
 }
 
 .my-1 input{
